2006-09-11  Will Duquette <will@wjduquette.com>
	* main2.tcl: Comp.statement.typevariable now places the type name
	directly in the "tvprocdec" rather than waiting to substitute it
	in later.

2006-08-19  Will Duquette <will@wjduquette.com>
	* main2.tcl, snit.test: Fixed Bug 1483168: "Namespaced snit objs
	are not commands in their ns".  In particular, Snit 2.x types and
	widgets now use [namespace path] to give themselves access to
	their parent namespace.
	* snit.man,snitfaq.man: Updated accordingly; also, fixed a couple
	of typos in snitfaq.man.

	* main2.tcl: Snit 2.x now uses [namespace upvar] where appropriate
	throughout the Snit run-time and also for implicit declaration of
	instance variables; I still need to use it for implicit
	declaration of type variables.  On my machine, dispatch of a
	method with 10 instance variables is over twice as fast
	when the variables are declared using [namespace upvar] rather
	than [::variable ${selfns}::varname].

	* main2.tcl: Snit 2.x now uses [namespace upvar] for implicit
	declaration of type variables as well.  It develops that
	[namespace upvar] is a lot faster than [::variable] even when 
	using the default namespace (e.g., "::variable varname").
	
2006-08-15  Will Duquette <will@wjduquette.com>
	* main2.tcl, snit.test: Fixed Bug 1532791: "snit2, 
	snit::widget problem".

2006-08-12  Will Duquette <will@wjduquette.com>
	* main1.tcl, main1_83.tcl, main2.tcl: Replaced as many [string equal] calls
	in main1_83.tcl with {"" ==/!= $a} expressions, so that the
	differences between the two files are minimized.  Also removed the
	"-glob" from calls to "array names" in main1.tcl.  There are now
	only a few remaining differences between the two files.

	Also, I added a "return" to the end of RT.DestroyObject in all
	three "main" modules, to prevent a confusing return value from
	"$object destroy" that Andreas noticed a while back.

	* snit.test: Two tests, iinfo-6.4 and iinfo-6.5, failed on Tcl